--- a/app/libs/script/classes/templates/bootstrap4/css/style.css
+++ b/app/libs/script/classes/templates/bootstrap4/css/style.css
@@ -3553,7 +3553,7 @@
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     -ms-flex-align: stretch;
     align-items: stretch;
     width: 100%;
